Bases improved instructions, highlight boxes to be converted at end, squash multiplication and subtraction boxes when they're no longer needed to keep everything on one screen

--- a/web/Bases.css
+++ b/web/Bases.css
@@ -67,6 +67,9 @@ th{
 .evenstripe{
 	background-color: WhiteSmoke;
 }
+.final{
+	margin: 5%;
+}
 .invisible{
 	border: none;
 	text-align: right;
